<resources>
    <string name="app_name">Chit-o-Chat</string>
    <string name="email">E-MAIL</string>
    <string name="password">PASSWORD</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER HERE</string>
    <string name="uname">USERNAME</string>
    <string name="submit">SUBMIT</string>
    <string name="cnfpass">CONFIRM PASSWORD</string>
    <string name="email_error">Invalid E-Mail</string>
    <string name="password_error">Invalid Password</string>
    <string name="u_error">Username should not be empty and shoulld start with capital letter.</string>
    <string name="chat_hint">Type a message</string>
    <string name="or">OR</string>
    <string name="other_methods"><u>Sign in with other methods</u></string>

    <string name="facebook_application_id" translatable="false">251753778695360</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb251753778695360</string>
</resources>
